Finaliza segunda parte

--- a/1_parte/atividade.html
+++ b/1_parte/atividade.html
@@ -38,7 +38,7 @@
 	</section>
 
 	<section id="sala">
-		<h1 id="salaTitulo">Sobre as sala de aula</h1>
+		<h1 id="salaTitulo">Sobre as salas de aula</h1>
 		<p id="salaDescricao">Com o atual cenário no qual toda população precisa permanecer
 				em casa para evitar aglomerações em razão do COVID-19, os alunos e professores
 				do UniBH estão realizado aulas online. Com a aula de desenvolvimento web não é
@@ -92,23 +92,3 @@
 </body>
 
 </html>
-
-<!-- <style>
-body {
-    margin: 0;
-    padding: 0;
-	background-image: url('imagem.jpg');
-	background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-header {
-	height: 65px;
-	line-height: 65px;
-	white-space: nowrap;
-}
-#mainTitle {
-	text-align: center;
-	color: white;
-}
-</style> -->
